fix margin on mobile

--- a/style.css
+++ b/style.css
@@ -18,6 +18,7 @@ body {
 
 .card {
     max-width: 525px;
+    margin: 30px;
     background-color: #fff;
     box-shadow: 0px 45px 77px -50px rgba(52, 87, 220, 0.361123);
     border-radius: 10px;
@@ -40,6 +41,12 @@ body {
 .card .description {
     color: #202842;
     margin: 0 83px;
+}
+
+@media(max-width:525px) {
+    .card .description {
+        margin: 0 40px;
+    }
 }
 
 .card .description .title {
